--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  intl: ^0.18.1
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
   hive_generator: ^1.1.3
   build_runner: ^2.1.11
 
