--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   hive_flutter: ^1.1.0
   intl: ^0.18.1
   cr_calendar: ^1.1.0
+  syncfusion_flutter_calendar: ^21.2.4
   
 
 dev_dependencies:
