--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: ^0.18.1
   cr_calendar: ^1.1.0
   syncfusion_flutter_calendar: ^21.2.4
+  table_calendar: ^3.0.9
   
 
 dev_dependencies:
