--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_slidable: ^3.0.0
   go_router: ^10.1.1
   shared_preferences: ^2.2.2
+  uuid: ^4.1.0
 
 dev_dependencies:
   flutter_test:
